<resources>
    <string name="app_name">My LessPass</string>
    <string name="security">Security</string>
    <string name="log_in">Log In</string>
    <string name="settings">Settings</string>
    <string name="keys">Keys</string>
    <string name="sign_out">Sign Out</string>

    <string name="hint_site">Site</string>
    <string name="hint_login">Login</string>
    <string name="hint_master_password">Master password</string>
    <string name="hint_email">Email</string>
    <string name="hint_less_password">LessPass password</string>
    <string name="hint_less_database">LessPass Database (https://…)</string>
    <string name="hint_search">Search</string>
    <string name="password">password</string>
    <string name="generate">Generate</string>


    <string name="copy">Copy</string>
    <string name="copied">Copied!</string>
    <string name="password_options">Password Options</string>
    <string name="abc">abc</string>
    <string name="abc_upper">ABC</string>
    <string name="numbers">123</string>
    <string name="symbols">%!@</string>

    <string name="length">Length</string>
    <string name="counter">Counter</string>

    <string name="default_lenght">16</string>
    <string name="default_counter">1</string>

    <string name="mandatory">site, login and master password fields are mandatory</string>
    <string name="emailPasswordError">Your email and/or password is not good. Do you have an account?</string>
    <string name="email_is_required">An email is required</string>
    <string name="email_is_invalid">Please enter a valid email</string>
    <string name="password_is_required">A password is required</string>

    <string name="use_master_password">Check me if you want to use your master password here.</string>
    <string name="use_master_password_expand">Your master password should not be saved on a database even encrypted. If you want to use your master password here, you can check the option. It will replace your master password with a LessPass generated password.</string>

    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="empty_string"></string>

    <string name="less_database">https://lesspass.com</string>
    <string name="self_hosted">Self Hosted Url</string>
    <string name="own_hosted">You can use your self hosted LessPass Database</string>

    <string name="save_as_def">save as default</string>
    <string name="saved_as_def">saved as default</string>

    <string name="options_saved">Options saved.</string>
    <string name="options_exist">This Options already exist!</string>

    <string name="loading">Loading…</string>
    <string name="nothing_to_show">There are no saved Options to show.</string>
    
    <string name="too_long_length">Length is too long</string>
    <string name="incorrect_length">Length is incorrect!</string>
    <string name="incorrect_counter">Counter is incorrect!</string>
</resources>
