<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/LessPassLeftRight">

    <EditText
        android:id="@+id/site_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LessPassFields"
        android:drawableStart="@drawable/ic_computer_black_18dp"
        android:drawableLeft="@drawable/ic_computer_black_18dp"
        android:hint="@string/hint_site"/>

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LessPassFields"
        android:drawableStart="@drawable/ic_person_black_18dp"
        android:drawableLeft="@drawable/ic_person_black_18dp"
        android:hint="@string/hint_login"/>

    <EditText
        android:id="@+id/master_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LessPassFields"
        android:drawableStart="@android:drawable/ic_secure"
        android:drawableLeft="@android:drawable/ic_secure"
        android:hint="@string/hint_master_password"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/colorGrayLighter"
            android:gravity="center"
            android:text="Text to clip board"/>

        <Button
            android:id="@+id/copy_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/LessPassButtonPrimary"
            android:text="@string/copy"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_options"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/hasLowerCaseLitters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/hasAppearCaseLitters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc_upper"
            style="@style/LessPass_marginLeft"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/hasNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numbers"
            style="@style/LessPass_marginLeft"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/hasSymbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbols"
            style="@style/LessPass_marginLeft"
            android:checked="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/length"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:id="@+id/length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@drawable/edit_text_border"
            android:text="@string/default_lenght"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/counter"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:id="@+id/counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@drawable/edit_text_border"
            android:text="@string/default_counter"/>



    </LinearLayout>

</LinearLayout>
