<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/LessPassLeftRight">

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LessPassFields"
        android:drawableStart="@drawable/ic_email_black_18dp"
        android:drawableLeft="@drawable/ic_email_black_18dp"
        android:hint="@string/hint_email"/>

    <EditText
        android:id="@+id/less_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LessPassFields"
        android:drawableStart="@android:drawable/ic_secure"
        android:drawableLeft="@android:drawable/ic_secure"
        android:hint="@string/hint_less_password"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                style="@style/LessPassButtonPrimary"/>

            <ProgressBar
                android:visibility="invisible"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:theme="@style/WhiteProgress"
                android:translationZ="10dp"
                android:indeterminate="true" />
        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp">

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                style="@style/LessPassButton"/>

            <ProgressBar
                android:visibility="invisible"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/progressBarRegister"
                android:layout_gravity="center"
                android:translationZ="10dp"
                android:indeterminate="true" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/email_password_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/emailPasswordError"
        android:padding="16dp"
        style="@style/LessPassError"
        android:visibility="gone"/>

</LinearLayout>